# ZMART-microscopy

./: .gitignore  CLAUDE.md  CODE_REVIEW.md  IMPROVEMENTS.md  LICENSE  PROJECT_STRUCTURE.md  README.md  acquire_hires.py  backbone-redesign_final.md  build_env.py  diag_scan_mode.py  driver.py  environment.yml  explore_export_paths.py  plot_zoom_speed_grid.py  pyproject.toml  requirements-dev.txt  requirements.txt  select_overview.py  smart_microscopy.ipynb  smart_microscopy_v2.ipynb  test_echo_poll.py  test_error_responses.py  test_grid_acquisition.py  test_hardware.py  test_integration.py  test_stage_movement.py  test_unit.py  test_zoom_speed_combos.py
calibration/: __init__.py
controller/: README.md  __init__.py  example_experiment.ipynb
docs/: API_VS_LOG_READER_COMPARISON_20260605.md  ASYNC_API_LOG_READER_PROBE_PLAN_20260605.md  CALIBRATION_REFACTOR_PLAN.md  MIDLAYER_PLAN.md  MINIMAL_LASX_PYTHON_ENV.md  NATIVE_AUTOSAVE_LOG_DEFAULTS_MICROSCOPE_TEST_PLAN.md  NATIVE_AUTOSAVE_LOG_DEFAULTS_MICROSCOPE_TEST_RESULTS.md  NATIVE_AUTOSAVE_LOG_DEFAULTS_USEFUL_FINDINGS_SUMMARY.md  READER_VALIDATION_REAL_SCOPE_20260611.md  READER_VALIDATION_REAL_SCOPE_20260611_HYBRID_MATRIX.md  READER_VALIDATION_SIMULATOR_20260611.md  REAL_MICROSCOPE_DRIVER_TEST_GATE_20260606.md  STATE_READERS_REFACTOR_PLAN.md  WHY_HYBRID_READERS_20260605.md  ZMART.md
driver/: .gitignore
getting-started/: README.md
getting_started/: README.md
lasx/: __init__.py  commands.py  confirm.py  core.py  errors.py  limits.py  profiles.py  readers.py  settings.py  util.py
lib/: initialize_experiment.py  microscope_connector.py  microscope_inspect.py
microscope_agnostic_controller/: README.md  __init__.py  example_experiment.ipynb  registry.py
notebooks/: inspect_template.ipynb  inspect_template_api.ipynb
prompts/: microscope-control.md
viz_studio/: .gitignore  INDEX.md  INTEGRATION_PLAN.md  INTEGRATION_ROADMAP.md  PLAN.md  README.md  SPIKE_RESULTS.md  TESTING.md  environment.yml  run_demo.py  run_tests.py
zmart/: README.md  (+2 more)
(+829 files in other folders)
