[project]
name = "zmart-microscopy"
version = "0.0.0"
description = "Smart-microscopy drivers and workflows (Leica Navigator Expert)."
requires-python = ">=3.10"
# Core runtime dependency shared by driver and workflow.
dependencies = [
    "numpy",
]

[project.optional-dependencies]
# Image I/O and OME validation used by the acquisition/save path.
io = ["tifffile", "ome-types"]
# Figure rendering and notebook display used by the workflow pipeline.
viz = ["matplotlib", "ipython"]
# Registration/focus math used by the calibration package.
calibration = ["opencv-python-headless", "scikit-image", "scipy", "pandas"]
# Everything needed to run the offline test suites.
test = [
    "pytest",
    "tifffile",
    "ome-types",
    "matplotlib",
    "ipython",
    "opencv-python-headless",
    "scikit-image",
    "scipy",
    "pandas",
]

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = [
    "build",
    "dist",
    ".venv",
    ".eggs",
    "**/__pycache__",
    # Calibration notebooks and generated sessions are not part of the
    # driver lint baseline.
    "microscopes/calibration/vendor/leica/navigator_expert/notebooks",
    "microscopes/calibration/vendor/leica/navigator_expert/sessions",
]

[tool.ruff.lint]
# Conservative starter set. Add rule families incrementally as the
# baseline shrinks. ruff check is report-only by default; pass --fix
# explicitly to apply autofixes.
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes (unused imports, undefined names, ...)
    "W",   # pycodestyle warnings
    "I",   # isort (import ordering)
    "UP",  # pyupgrade (dead syntax for the target Python)
    "B",   # flake8-bugbear (likely bugs)
]
ignore = [
    "E501",  # line length is enforced by the formatter, not the linter
    "B008",  # function-call-in-default-argument: false-positive heavy
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
